docker and jenkins setup

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
 <h1>Welcome to NebulaBox 🚀</h1>
 <p>Your cloud-native, real-world Rails + DevOps learning app.</p>
 <p>This is the foundation. CI/CD, Docker, ECS, and more coming soon.</p>
+<p>A Simple working Notes feature involving basic crud operations</p>
+<p><%= link_to "View Notes", notes_path %></p>
+
